--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -184,13 +184,13 @@ spring:
   datasource:
       name : geekcattle
       username  : root
-      password  : root
+      password  : 123456
       url : jdbc:mysql://localhost:3306/geekcattle?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
   redis:
     database : 0
     host : 127.0.0.1
     port : 6379
-    password : Hao123
+    password : 123456
 
 server:
   port: 8000
@@ -203,14 +203,14 @@ spring:
   profiles: pro
   datasource:
       name : geekcattle
-      username  : geekcattle
-      password  : GeekCattle
+      username  : root
+      password  : 123456
       url : jdbc:mysql://localhost:3306/geekcattle?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
   redis:
       database : 0
       host : 127.0.0.1
       port : 6379
-      password : Test123
+      password : 123456
 server:
   port: 8001
 
